mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo-deployment
    namespace: k8s-template
    labels:
        app: mongo
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongo
    template:
        metadata:
            labels:
                app: mongo
        spec:
            volumes:
                - name: mongo-storage
                  persistentVolumeClaim:
                      claimName: mongo-persistentvolumeclaim
            containers:
                - name: mongo
                  image: mongo
                  ports:
                      - containerPort: 27017
                  volumeMounts:
                      - name: mongo-storage
                        mountPath: /data/db
