server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
    namespace: k8s-template
    labels:
        app: server
spec:
    replicas: 3
    selector:
        matchLabels:
            app: server
    template:
        metadata:
            labels:
                app: server
        spec:
            containers:
                - name: server
                  image: paolodenti/k8s-template-server
                  ports:
                      - containerPort: 8080
