client-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-service
    namespace: k8s-template
spec:
    selector:
        app: client
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 80
