client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
    namespace: k8s-template
    labels:
        app: client
spec:
    replicas: 1
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            labels:
                app: client
        spec:
            containers:
                - name: client
                  image: paolodenti/k8s-template-client
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: client-service
    namespace: k8s-template
spec:
    selector:
        app: client
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 80
