mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mongo-express-service
    namespace: k8s-template
spec:
    selector:
        app: mongo-express
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081
