mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mongo-service
    namespace: k8s-template
spec:
    selector:
        app: mongo
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 27017
          targetPort: 27017
