server-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-service
    namespace: k8s-template
spec:
    selector:
        app: server
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
