server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
    namespace: k8s-template
    labels:
        app: server
spec:
    replicas: 1
    selector:
        matchLabels:
            app: server
    template:
        metadata:
            labels:
                app: server
        spec:
            containers:
                - name: server
                  image: paolodenti/k8s-template-server
                  resources:
                      requests:
                          cpu: 250m
                          memory: 256Mi
                      limits:
                          cpu: 500m
                          memory: 512Mi
                  ports:
                      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: server-service
    namespace: k8s-template
spec:
    selector:
        app: server
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
